--- a/index.html
+++ b/index.html
@@ -12,9 +12,26 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="static/css/nucleo-icons.css" rel="stylesheet" />
 
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/main.css" rel="stylesheet">
+    <link href="static/css/responsive.css" rel="stylesheet">
+
   </head>
   <body>
-    <div id="app"></div>
+    m<div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+
+  <script type="text/javascript" src="static/js/jquery.js"></script>
+  <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.magnific-popup.min.js"></script>
+  <script type="text/javascript" src="static/js/owl.carousel.min.js"></script>
+  <script type="text/javascript" src="static/js/moment.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.simpleWeather.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.sticky-kit.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.easy-ticker.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.subscribe-better.min.js"></script>
+  <script type="text/javascript" src="static/js/main.js"></script>
+  <script type="text/javascript" src="static/js/switcher.js"></script>
 </html>
